# PDF-Question-Answering

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  setup.py  streamlit.py  template.py
.github/workflows/: action.yml  dev_action.yml
HLD/: HLD.md
notebooks/: 01_experiment.ipynb
pdf_question_answering/constants/: __init__.py
pdf_question_answering/db/: config.py  database.py  models.py  schemas.py
pdf_question_answering/exception/: __init__.py
pdf_question_answering/llm/: embeddings.py  llm.py  llm_service.py  vector_db.py
pdf_question_answering/logger/: __init__.py
pdf_question_answering/routers/: routes.py
pdf_question_answering/utils/: read_pdf.py
tests/: test_app.py
